--- a/tendies-exchange-ui/package.json
+++ b/tendies-exchange-ui/package.json
@@ -25,6 +25,7 @@
     "next": "latest",
     "node-fetch": "^2.6.1",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.11.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.7.0",
     "react-toast-notifications": "^2.4.0",
