--- a/tendies-exchange-ui/package.json
+++ b/tendies-exchange-ui/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.3.3",
+    "chart.js": "^2.9.4",
     "eth-ens-namehash": "^2.0.8",
     "firebase": "^8.2.6",
     "formik": "^2.2.6",
